# obs-frackground

./: .gitignore  CMakeLists.txt  LICENSE  README.md  RELEASE.md  THIRD_PARTY_NOTICES.md
data/: frackground.effect
data/locale/: en-US.ini
packaging/arch/: .SRCINFO  .gitignore  PKGBUILD  README.md  obs-frackground.install
scripts/: download-rvm-models.sh  package-linux.sh
src/: inference_worker.cpp  inference_worker.hpp  model_adapter.cpp  model_adapter.hpp  onnx_backend.cpp  onnx_backend.hpp  plugin.cpp
tools/: probe_model.cpp
